--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 1,
       "id": "53f023ba",
       "metadata": {
         "id": "53f023ba"
@@ -77,15 +77,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 5,
       "id": "072c1959",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 500
+          "height": 424
         },
         "id": "072c1959",
-        "outputId": "52d48fb2-077f-4299-94dc-15b96c4610a8"
+        "outputId": "081cedd3-d1d9-4efa-ad5c-9c64161399ca"
       },
       "outputs": [
         {
@@ -135,7 +135,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-46df0e49-d270-466e-839c-0afbda50b01a\">\n",
+              "  <div id=\"df-0de8273b-e881-494d-90d2-826ce37e10b5\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -327,7 +327,7 @@
               "</table>\n",
               "<p>2938 rows × 11 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-46df0e49-d270-466e-839c-0afbda50b01a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0de8273b-e881-494d-90d2-826ce37e10b5')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -378,12 +378,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-46df0e49-d270-466e-839c-0afbda50b01a button.colab-df-convert');\n",
+              "          document.querySelector('#df-0de8273b-e881-494d-90d2-826ce37e10b5 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-46df0e49-d270-466e-839c-0afbda50b01a');\n",
+              "          const element = document.querySelector('#df-0de8273b-e881-494d-90d2-826ce37e10b5');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -406,7 +406,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 115
+          "execution_count": 5
         }
       ],
       "source": [
@@ -418,14 +418,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 4,
       "id": "1003ff45",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1003ff45",
-        "outputId": "c60a5ba1-4556-4e07-d378-fdd915d5ecc8"
+        "outputId": "a00ae221-dc7a-4103-92b6-1fde7704bfdf"
       },
       "outputs": [
         {
@@ -439,7 +439,7 @@
             "---  ------                  --------------  -----  \n",
             " 0   Country                 2938 non-null   object \n",
             " 1   Year                    2938 non-null   int64  \n",
-            " 2   Status                  2938 non-null   object \n",
+            " 2   Status                  2938 non-null   int64  \n",
             " 3   Life expectancy         2928 non-null   float64\n",
             " 4   Adult Mortality         2928 non-null   float64\n",
             " 5   infant deaths           2938 non-null   int64  \n",
@@ -448,7 +448,7 @@
             " 8   GDP                     2490 non-null   float64\n",
             " 9   Population              2286 non-null   float64\n",
             " 10  Schooling               2775 non-null   float64\n",
-            "dtypes: float64(7), int64(2), object(2)\n",
+            "dtypes: float64(7), int64(3), object(1)\n",
             "memory usage: 252.6+ KB\n"
           ]
         }
@@ -487,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": null,
       "id": "41e644bb",
       "metadata": {
         "colab": {
@@ -555,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": null,
       "id": "dd2f5f6d",
       "metadata": {
         "colab": {
@@ -609,15 +609,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 7,
       "id": "91fe3ea2",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 500
+          "height": 424
         },
         "id": "91fe3ea2",
-        "outputId": "8555fa73-4df2-43ab-c0db-b1f634072b0d"
+        "outputId": "ce0ba676-377d-4bd9-cca5-841acda0cfdd"
       },
       "outputs": [
         {
@@ -667,7 +667,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-93873da6-6548-4bd0-9a9a-ad72f6e8369d\">\n",
+              "  <div id=\"df-ce563938-a164-4c01-bbeb-6d8a4111d891\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -859,7 +859,7 @@
               "</table>\n",
               "<p>2938 rows × 11 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-93873da6-6548-4bd0-9a9a-ad72f6e8369d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ce563938-a164-4c01-bbeb-6d8a4111d891')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -910,12 +910,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-93873da6-6548-4bd0-9a9a-ad72f6e8369d button.colab-df-convert');\n",
+              "          document.querySelector('#df-ce563938-a164-4c01-bbeb-6d8a4111d891 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-93873da6-6548-4bd0-9a9a-ad72f6e8369d');\n",
+              "          const element = document.querySelector('#df-ce563938-a164-4c01-bbeb-6d8a4111d891');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -938,7 +938,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 119
+          "execution_count": 7
         }
       ],
       "source": [
@@ -946,8 +946,7 @@
         "\n",
         "# This dicitonary allows us to easily assign the number 0 to the string \"Developing\" and 1 to \"Developed\". We can call this dicitionary when refering what we will change the country's status too\n",
         "mapDictionary = {\"Developing\": 0, \"Developed\": 1}\n",
-        "mapping = data[\"Status\"].map(mapDictionary)\n",
-        "data[\"Status\"] = mapping\n",
+        "data[\"Status\"] = data[\"Status\"].map(mapDictionary)\n",
         "\n",
         "data\n"
       ]
@@ -967,52 +966,69 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 35,
       "id": "c8eae1f2",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "c8eae1f2",
-        "outputId": "a9cebef2-e23f-4480-c159-adb0ab4866d2"
+        "outputId": "cb1261ab-d4ae-43d1-f646-5a6554e34325"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Country with Minimum GDP:  1.68135 \n",
-            "Country with average GDP:  4286.556053009696 \n",
-            "Country with Maximum GDP:  88564.82298\n"
+            "Country with Minimum GDP: Philippines with a GDP of 1.68135 \n",
+            "Country with Maximum GDP: Qatar with a GDP of 88564.82298\n",
+            "\n",
+            "The average GDP is: 4286.556053009696 and the country closest to this is Jamaica 2009\n"
           ]
         }
       ],
       "source": [
         "# Write your code to answer the Q4 #\n",
-        "dict = {\"min\" : 1000, \"avg\" : 0, \"max\" : 0}\n",
+        "dict = {\"min\" : 100000, \"avg\" : 0, \"max\" : 0}\n",
         "min, max \n",
         "minC = \"\"\n",
         "maxC = \"\"\n",
+        "# Gets the average from the 'Status' column, specifically the ones with status of 0. As we set all countries with a status of \"Developing\" to 0.\n",
+        "avg = data.loc[data[\"Status\"] == 0][\"GDP\"].mean()\n",
         "\n",
+        "# Loops through all rows of the data\n",
         "for i in range(len(data)):\n",
-        "  curr = data.GDP.get(i)\n",
-        "  country = data.Country.get(i)\n",
-        "  status = data.Status.get(i)\n",
+        "  curr = data.GDP.get(i) #gets the GDP of the current data row\n",
+        "  country = data.Country.get(i) #gets the current country\n",
+        "  status = data.Status.get(i) #gets the current status \n",
         "\n",
         "  #checks if the GDP value is not none if the status of the country is 'Developing'\n",
         "  if(curr > 0 and curr is not None and status == 0):\n",
-        "    if(curr > dict.get(\"max\")):\n",
+        "    if(curr > dict.get(\"max\")): #if the current Country's GDP is larger then that which we have stored in our dicitionary, then update the dicitionary's definition of max.\n",
         "      maxC = country\n",
         "      dict[\"max\"] = curr\n",
         "\n",
-        "    elif(curr < dict.get(\"min\")):\n",
+        "    elif(curr < dict.get(\"min\")): #if current Country's GDP is smaller then that which we have stored in our dicitionary, update the dicitionary's definition of min\n",
         "      minC = country\n",
         "      dict[\"min\"] = curr\n",
         "\n",
-        "    \n",
         "\n",
-        "avg = data.loc[data[\"Status\"] == 0][\"GDP\"].mean()\n",
-        "print(\"Country with Minimum GDP: \", dict[\"min\"],\"\\nCountry with average GDP: \", avg, \"\\nCountry with Maximum GDP: \", dict[\"max\"])"
+        "avgCountry = data.Country.get(0)\n",
+        "avgYear = data.Year.get(0)\n",
+        "curr = data.GDP.get(0)\n",
+        "\n",
+        "\n",
+        "#Loops thorugh all the data, used to find the country's GDP is the closest to the average\n",
+        "for i in range(len(data)):\n",
+        "  diff = data.GDP.get(i)\n",
+        "  \n",
+        "  if(abs(diff - avg) < abs(curr-avg)):\n",
+        "    curr = diff\n",
+        "    avgCountry =  data.Country.get(i)\n",
+        "    avgYear = data.Year.get(i)\n",
+        "\n",
+        "print(\"Country with Minimum GDP:\", minC, \"with a GDP of\", dict[\"min\"], \"\\nCountry with Maximum GDP:\", maxC, \"with a GDP of\", dict[\"max\"])\n",
+        "print(\"\\nThe average GDP is:\", avg, \"and the country closest to this is\", avgCountry, avgYear)"
       ]
     },
     {
@@ -1029,7 +1045,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": null,
       "id": "7724a2e6",
       "metadata": {
         "id": "7724a2e6",
@@ -1064,7 +1080,7 @@
         "gdpCorrelations = data.corr()\n",
         "print(gdpCorrelations[\"GDP\"])\n",
         "\n",
-        "#The negative data columns are; 'Adult Mortality', 'infant deaths', 'Population',\n",
+        "#The factors which negatively affect the GDP are; 'Adult Mortality', 'infant deaths', 'Population'\n",
         "\n"
       ]
     },
