--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -107,7 +107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "czZDsYDBC7uW",
-        "outputId": "8dd227d0-48e8-409d-86c5-b951a0e41707"
+        "outputId": "0d8da660-f3df-4e69-c523-41946cf533c4"
       },
       "outputs": [
         {
@@ -152,7 +152,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EjcdUke5sBNW",
-        "outputId": "4cc58232-1420-4a53-f197-bcfa2f79ea4e"
+        "outputId": "3e85d73b-223e-4d74-9438-9083c95ef8fb"
       },
       "outputs": [
         {
@@ -171,7 +171,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 31
         }
       ],
       "source": [
@@ -224,7 +224,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MRjMM7eXu8lL",
-        "outputId": "c278b75f-cc8d-4b1c-e39d-92af1f576571"
+        "outputId": "3d4e4ada-5253-4053-cf93-5acc7ad305ac"
       },
       "outputs": [
         {
@@ -248,23 +248,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zuNYcyCPvODO",
-        "outputId": "df854db3-ec8f-453d-b6ff-0c17e4b6f309"
+        "outputId": "2978d230-8648-43dd-8208-9fd7de634b71"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n",
-            "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "after preprocessing: \n",
             " it wa rainy friday afternoon in columbus when persuaded friend to see matinee performance of mst3k tm nhe had never seen any episode of the show and have watched scant few due to it unsocial airtime on comedy central and the uneven nature of many of the episode nfor those of you not familiar with the premise dr clayton forrester beaulieu wish to take over the world by finding the worst film ever made and unleashing it upon an unsuspecting public nto achieve this he in the word of the tv series theme which is missing in the movie bumped mike nelson nelson on the noggin and then shot him into space and is monitoring nelson reaction to the movie he is forced to endure nrather than succumb to the sheer awfulness of many of the movie nelson spends his time making wisecrack with the help of his two robot companion tom servo and crow robot nthe format of the show consists of nelson servo and crow making their comment while silhouetted against the movie being watched and break every 20 minute or so for segment set on the satellite of love the ship on which our hero are marooned nonly two thing are different in the movie the absence of forrester sidekick tv frank and the slower pace of the joke nthis latter change is presumably deliberate to avoid the viewing audience missing some of the best line while laughing from the previous joke nfor their big screen outing the producer have chosen this island earth 1954 classic and one of the first sf film to have special effect budget larger than the average grocery bill nunfortunately for that film but making it ideal mst3k fodder acting and dialogue appear to have taken back seat to the effect which by today standard are le than impressive nnelson co make joke about everything from japan dominance in the world market to star trek to the state of disrepair of seattle kingdome and most of them work nunfortunately the segment set outside the satellite movie theater seem out of place and aren particularly funny but at least they re fairly short nthe big question about this movie though is why ni presume it wa an attempt to gain larger following to keep support behind the series rumour of it impending demise circulated for some time before the plug wa eventually pulled few month ago but the format gain nothing from it transition to the big screen there are no special effect to dazzle you no action sequence to keep you on the edge of your seat and no use of digital surround sound nso it seems pointless to spend 8 per person to see this movie when in few month it will be out on video and you can watch it for 3 and not have to sit in room full of popcorn addict nnevertheless mst3k tm provides more laugh out loud opportunity than any film you re going to see this year and thoroughly recommend it to anyone with pulse ngiven it uniqueness hesitate to grade it against other film but it fulfils it claim and so in the class of unsubtle comedy film whose laugh come at the expense of bad movie it doe well\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n",
+            "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
           ]
         }
       ],
@@ -320,7 +320,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jXpFn4Anh-bF",
-        "outputId": "b9463d0c-57b4-4c7e-a57f-ac0bb93eb5ad"
+        "outputId": "bcb0405a-eccb-41ce-bc8e-b7309176c01c"
       },
       "outputs": [
         {
@@ -388,7 +388,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N8GzFxh-bVtc",
-        "outputId": "c1094536-60ce-4e50-c1ea-df30fbe4d5e5"
+        "outputId": "aaa4eae8-1edd-40e1-f40e-788eea04d772"
       },
       "outputs": [
         {
@@ -428,7 +428,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6-ASd6Z5bVtd",
-        "outputId": "1ff2ccde-c4d5-44c1-8cb2-3fb9030b107c"
+        "outputId": "446999d1-24ed-43ba-8073-0bc8236229ae"
       },
       "outputs": [
         {
@@ -482,54 +482,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cfQbERDNbVtd",
-        "outputId": "28f81c4b-a3d8-4ab9-96d3-0000c4665a1c"
+        "outputId": "f246417d-4a62-47d7-9dea-02bf5e178df8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy:0.7175\n",
-            "Accuracy:0.6975\n",
-            "Accuracy:0.6875\n"
+            "Accuracy penalty \"none\" :0.7175\n",
+            "Accuracy penalty \"l1\" :0.7\n",
+            "Accuracy penalty \"l2\" :0.6875\n"
           ]
         }
       ],
       "source": [
         "# write your code here\n",
-        "#Penalty none\n",
-        "text_classifier1 = Pipeline([\n",
-        "      ('vect', CountVectorizer(max_features=100)),\n",
-        "      ('tfidf', TfidfTransformer(use_idf=False)),\n",
-        "      ('classifier1', LogisticRegression(penalty='none', solver='saga', max_iter=1000)),\n",
-        "  ])\n",
-        "text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
-        "docs_test = pre_processed_reviews_test\n",
-        "predicted = text_classifier1.predict(docs_test)\n",
-        "print('Accuracy:{}'.format(np.mean(predicted ==  labels_test)))\n",
+        "# In this task we see that the \"none\" penalty has the highest accuracy \n",
+        "penalties = [\"none\", \"l1\", \"l2\"]\n",
         "\n",
-        "#Penalty l1\n",
-        "text_classifier1 = Pipeline([\n",
-        "      ('vect', CountVectorizer(max_features=100)),\n",
+        "for pen in penalties:\n",
+        "  text_classifier1 = Pipeline([\n",
+        "      ('vect', CountVectorizer(max_features = 100)),\n",
         "      ('tfidf', TfidfTransformer(use_idf=False)),\n",
-        "      ('classifier1', LogisticRegression(penalty='l1', solver='saga', max_iter=1000)),\n",
+        "      ('classifier1', LogisticRegression(penalty = pen, solver = 'saga', max_iter=1000)),\n",
         "  ])\n",
-        "text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
-        "docs_test = pre_processed_reviews_test\n",
-        "predicted = text_classifier1.predict(docs_test)\n",
-        "print('Accuracy:{}'.format(np.mean(predicted ==  labels_test)))\n",
-        "\n",
-        "\n",
-        "#Penalty l2\n",
-        "text_classifier1 = Pipeline([\n",
-        "      ('vect', CountVectorizer(max_features=100)),\n",
-        "      ('tfidf', TfidfTransformer(use_idf=False)),\n",
-        "      ('classifier1', LogisticRegression(penalty='l2',solver = 'saga',max_iter=1000)),\n",
-        "  ])\n",
-        "text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
-        "docs_test = pre_processed_reviews_test\n",
-        "predicted = text_classifier1.predict(docs_test)\n",
-        "print('Accuracy:{}'.format(np.mean(predicted ==  labels_test)))"
+        "  text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
+        "  docs_test = pre_processed_reviews_test\n",
+        "  predicted = text_classifier1.predict(docs_test)\n",
+        "  print('Accuracy penalty \"{}\" :{}'.format(pen,np.mean(predicted ==  labels_test))) \n"
       ]
     },
     {
@@ -560,63 +540,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cnY8zbs8bVte",
-        "outputId": "f172d68d-cc9a-4e83-f3c0-fc4f66d3081f"
+        "outputId": "672ca53a-d3b4-46d9-81df-38365fc97fac"
       },
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/linear_model/_sag.py:354: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-            "  ConvergenceWarning,\n"
-          ]
-        },
-        {
-          "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy:0.79\n",
-            "Accuracy:0.805\n",
-            "Accuracy:0.8025\n"
+            "Accuracy penalty \"none\" :0.79\n",
+            "Accuracy penalty \"l1\" :0.8025\n",
+            "Accuracy penalty \"l2\" :0.8\n"
           ]
         }
       ],
       "source": [
         "# write your code here\n",
+        "#In this task we see that either penalties l1 and l2 have the same accuracy or l1 is larger then l2 (in both cases none has the lowest)\n",
         "\n",
-        "#Penalty none\n",
-        "text_classifier1 = Pipeline([\n",
-        "      ('vect', CountVectorizer(max_features=1500)),\n",
+        "penalties = [\"none\", \"l1\", \"l2\"]\n",
+        "\n",
+        "\n",
+        "for pen in penalties:\n",
+        "  text_classifier1 = Pipeline([\n",
+        "      ('vect', CountVectorizer(max_features = 1500)),\n",
         "      ('tfidf', TfidfTransformer(use_idf=True)),\n",
-        "      ('classifier1', LogisticRegression(penalty='none', solver='saga')),\n",
+        "      ('classifier1', LogisticRegression(penalty = pen, solver = 'saga', max_iter=1600)),\n",
         "  ])\n",
-        "text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
-        "docs_test = pre_processed_reviews_test\n",
-        "predicted = text_classifier1.predict(docs_test)\n",
-        "print('Accuracy:{}'.format(np.mean(predicted ==  labels_test)))\n",
-        "\n",
-        "#Penalty l1\n",
-        "text_classifier1 = Pipeline([\n",
-        "      ('vect', CountVectorizer(max_features=1500)),\n",
-        "      ('tfidf', TfidfTransformer(use_idf=True)),\n",
-        "      ('classifier1', LogisticRegression(penalty='l1', solver='saga')),\n",
-        "  ])\n",
-        "text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
-        "docs_test = pre_processed_reviews_test\n",
-        "predicted = text_classifier1.predict(docs_test)\n",
-        "print('Accuracy:{}'.format(np.mean(predicted ==  labels_test)))\n",
-        "\n",
-        "\n",
-        "#Penalty l2\n",
-        "text_classifier1 = Pipeline([\n",
-        "      ('vect', CountVectorizer(max_features=1500)),\n",
-        "      ('tfidf', TfidfTransformer(use_idf=True)),\n",
-        "      ('classifier1', LogisticRegression(penalty='l2',solver = 'saga')),\n",
-        "  ])\n",
-        "text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
-        "docs_test = pre_processed_reviews_test\n",
-        "predicted = text_classifier1.predict(docs_test)\n",
-        "print('Accuracy:{}'.format(np.mean(predicted ==  labels_test)))"
+        "  text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
+        "  docs_test = pre_processed_reviews_test\n",
+        "  predicted = text_classifier1.predict(docs_test)\n",
+        "  print('Accuracy penalty \"{}\" :{}'.format(pen,np.mean(predicted ==  labels_test))) \n"
       ]
     },
     {
@@ -645,14 +598,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "19a800e8-9ace-498b-fa50-fbf377684c1b"
+        "outputId": "78a81ce5-ae10-44e1-df2b-61298c40db1a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy:0.715\n"
+            "Accuracy penalty \"none\" :0.715\n"
           ]
         },
         {
@@ -667,7 +620,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy:0.7575\n"
+            "Accuracy penalty \"none\" :0.735\n"
           ]
         },
         {
@@ -682,87 +635,54 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy:0.7975\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/linear_model/_sag.py:354: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-            "  ConvergenceWarning,\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Accuracy:0.8075\n",
-            "Accuracy:0.845\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/linear_model/_sag.py:354: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-            "  ConvergenceWarning,\n"
+            "Accuracy penalty \"none\" :0.77\n",
+            "Accuracy penalty \"none\" :0.79\n",
+            "Accuracy penalty \"none\" :0.835\n",
+            "Accuracy penalty \"l1\" :0.71\n",
+            "Accuracy penalty \"l1\" :0.7975\n",
+            "Accuracy penalty \"l1\" :0.8\n",
+            "Accuracy penalty \"l1\" :0.805\n",
+            "Accuracy penalty \"l1\" :0.8025\n",
+            "Accuracy penalty \"l2\" :0.7075\n",
+            "Accuracy penalty \"l2\" :0.7775\n",
+            "Accuracy penalty \"l2\" :0.7975\n",
+            "Accuracy penalty \"l2\" :0.8025\n",
+            "Accuracy penalty \"l2\" :0.7975\n"
           ]
         }
       ],
       "source": [
         "# write your code here\n",
         "\n",
-        "text_classifier1 = Pipeline([\n",
-        "      ('vect', CountVectorizer(max_features=100)),\n",
-        "      ('tfidf', TfidfTransformer(use_idf=True)),\n",
-        "      ('classifier1', LogisticRegression(penalty='none', solver='saga')),\n",
-        "  ])\n",
-        "text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
-        "docs_test = pre_processed_reviews_test\n",
-        "predicted = text_classifier1.predict(docs_test)\n",
-        "print('Accuracy:{}'.format(np.mean(predicted ==  labels_test)))\n",
+        "penalties = [\"none\", \"l1\", \"l2\"]\n",
+        "countVectorSize = [100, 500, 1000, 1500, 2000]\n",
         "\n",
-        "text_classifier1 = Pipeline([\n",
-        "      ('vect', CountVectorizer(max_features=500)),\n",
+        "for pen in penalties:\n",
+        "  for count in countVectorSize:\n",
+        "    if count < 100:\n",
+        "      max = 1000\n",
+        "    else:\n",
+        "      max = 1600\n",
+        "    text_classifier1 = Pipeline([\n",
+        "      ('vect', CountVectorizer(max_features = count)),\n",
         "      ('tfidf', TfidfTransformer(use_idf=True)),\n",
-        "      ('classifier1', LogisticRegression(penalty='none', solver='saga')),\n",
-        "  ])\n",
-        "text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
-        "docs_test = pre_processed_reviews_test\n",
-        "predicted = text_classifier1.predict(docs_test)\n",
-        "print('Accuracy:{}'.format(np.mean(predicted ==  labels_test)))\n",
-        "\n",
-        "text_classifier1 = Pipeline([\n",
-        "      ('vect', CountVectorizer(max_features=1000)),\n",
-        "      ('tfidf', TfidfTransformer(use_idf=True)),\n",
-        "      ('classifier1', LogisticRegression(penalty='none', solver='saga')),\n",
-        "  ])\n",
-        "text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
-        "docs_test = pre_processed_reviews_test\n",
-        "predicted = text_classifier1.predict(docs_test)\n",
-        "print('Accuracy:{}'.format(np.mean(predicted ==  labels_test)))\n",
-        "\n",
-        "text_classifier1 = Pipeline([\n",
-        "      ('vect', CountVectorizer(max_features=1500)),\n",
-        "      ('tfidf', TfidfTransformer(use_idf=True)),\n",
-        "      ('classifier1', LogisticRegression(penalty='none', solver='saga')),\n",
-        "  ])\n",
-        "text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
-        "docs_test = pre_processed_reviews_test\n",
-        "predicted = text_classifier1.predict(docs_test)\n",
-        "print('Accuracy:{}'.format(np.mean(predicted ==  labels_test)))\n",
-        "\n",
-        "text_classifier1 = Pipeline([\n",
-        "      ('vect', CountVectorizer(max_features=2000)),\n",
-        "      ('tfidf', TfidfTransformer(use_idf=True)),\n",
-        "      ('classifier1', LogisticRegression(penalty='none', solver='saga')),\n",
-        "  ])\n",
-        "text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
-        "docs_test = pre_processed_reviews_test\n",
-        "predicted = text_classifier1.predict(docs_test)\n",
-        "print('Accuracy:{}'.format(np.mean(predicted ==  labels_test)))"
+        "      ('classifier1', LogisticRegression(penalty = pen, solver = 'saga', max_iter=max)),\n",
+        "    ])\n",
+        "    text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
+        "    docs_test = pre_processed_reviews_test\n",
+        "    predicted = text_classifier1.predict(docs_test)\n",
+        "    print('Accuracy penalty \"{}\" :{}'.format(pen,np.mean(predicted ==  labels_test))) \n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hSlTq32lEvlh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
