--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -107,7 +107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "czZDsYDBC7uW",
-        "outputId": "0d8da660-f3df-4e69-c523-41946cf533c4"
+        "outputId": "53c7df8f-0c17-430a-ec8c-a707887fafae"
       },
       "outputs": [
         {
@@ -152,15 +152,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EjcdUke5sBNW",
-        "outputId": "3e85d73b-223e-4d74-9438-9083c95ef8fb"
+        "outputId": "2d4d7e61-c3f5-4711-ab70-de816628e801"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
-            "[nltk_data]   Package wordnet is already up-to-date!\n"
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n"
           ]
         },
         {
@@ -171,7 +170,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 4
         }
       ],
       "source": [
@@ -224,7 +223,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MRjMM7eXu8lL",
-        "outputId": "3d4e4ada-5253-4053-cf93-5acc7ad305ac"
+        "outputId": "e8da3be2-a051-4b67-f89a-e947ed6204e8"
       },
       "outputs": [
         {
@@ -248,23 +247,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zuNYcyCPvODO",
-        "outputId": "2978d230-8648-43dd-8208-9fd7de634b71"
+        "outputId": "735b0fe7-e1d6-4f3d-d313-72072f6350eb"
       },
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "after preprocessing: \n",
             " it wa rainy friday afternoon in columbus when persuaded friend to see matinee performance of mst3k tm nhe had never seen any episode of the show and have watched scant few due to it unsocial airtime on comedy central and the uneven nature of many of the episode nfor those of you not familiar with the premise dr clayton forrester beaulieu wish to take over the world by finding the worst film ever made and unleashing it upon an unsuspecting public nto achieve this he in the word of the tv series theme which is missing in the movie bumped mike nelson nelson on the noggin and then shot him into space and is monitoring nelson reaction to the movie he is forced to endure nrather than succumb to the sheer awfulness of many of the movie nelson spends his time making wisecrack with the help of his two robot companion tom servo and crow robot nthe format of the show consists of nelson servo and crow making their comment while silhouetted against the movie being watched and break every 20 minute or so for segment set on the satellite of love the ship on which our hero are marooned nonly two thing are different in the movie the absence of forrester sidekick tv frank and the slower pace of the joke nthis latter change is presumably deliberate to avoid the viewing audience missing some of the best line while laughing from the previous joke nfor their big screen outing the producer have chosen this island earth 1954 classic and one of the first sf film to have special effect budget larger than the average grocery bill nunfortunately for that film but making it ideal mst3k fodder acting and dialogue appear to have taken back seat to the effect which by today standard are le than impressive nnelson co make joke about everything from japan dominance in the world market to star trek to the state of disrepair of seattle kingdome and most of them work nunfortunately the segment set outside the satellite movie theater seem out of place and aren particularly funny but at least they re fairly short nthe big question about this movie though is why ni presume it wa an attempt to gain larger following to keep support behind the series rumour of it impending demise circulated for some time before the plug wa eventually pulled few month ago but the format gain nothing from it transition to the big screen there are no special effect to dazzle you no action sequence to keep you on the edge of your seat and no use of digital surround sound nso it seems pointless to spend 8 per person to see this movie when in few month it will be out on video and you can watch it for 3 and not have to sit in room full of popcorn addict nnevertheless mst3k tm provides more laugh out loud opportunity than any film you re going to see this year and thoroughly recommend it to anyone with pulse ngiven it uniqueness hesitate to grade it against other film but it fulfils it claim and so in the class of unsubtle comedy film whose laugh come at the expense of bad movie it doe well\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n",
-            "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
           ]
         }
       ],
@@ -320,7 +318,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jXpFn4Anh-bF",
-        "outputId": "bcb0405a-eccb-41ce-bc8e-b7309176c01c"
+        "outputId": "87a7e352-7736-4a16-eb75-3025e7618442"
       },
       "outputs": [
         {
@@ -388,7 +386,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N8GzFxh-bVtc",
-        "outputId": "aaa4eae8-1edd-40e1-f40e-788eea04d772"
+        "outputId": "4ca20295-7cd4-4987-d3c0-ddbd9675b997"
       },
       "outputs": [
         {
@@ -428,7 +426,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6-ASd6Z5bVtd",
-        "outputId": "446999d1-24ed-43ba-8073-0bc8236229ae"
+        "outputId": "ade97b24-1673-4b51-bd5b-71f9e811763d"
       },
       "outputs": [
         {
@@ -482,7 +480,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cfQbERDNbVtd",
-        "outputId": "f246417d-4a62-47d7-9dea-02bf5e178df8"
+        "outputId": "37328e07-4cb6-4d90-dedf-27608a951f50"
       },
       "outputs": [
         {
@@ -491,7 +489,7 @@
           "text": [
             "Accuracy penalty \"none\" :0.7175\n",
             "Accuracy penalty \"l1\" :0.7\n",
-            "Accuracy penalty \"l2\" :0.6875\n"
+            "Accuracy penalty \"l2\" :0.69\n"
           ]
         }
       ],
@@ -540,7 +538,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cnY8zbs8bVte",
-        "outputId": "672ca53a-d3b4-46d9-81df-38365fc97fac"
+        "outputId": "36cce6e1-7da2-492a-8152-158589c356b8"
       },
       "outputs": [
         {
@@ -548,7 +546,7 @@
           "name": "stdout",
           "text": [
             "Accuracy penalty \"none\" :0.79\n",
-            "Accuracy penalty \"l1\" :0.8025\n",
+            "Accuracy penalty \"l1\" :0.805\n",
             "Accuracy penalty \"l2\" :0.8\n"
           ]
         }
@@ -592,20 +590,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "xf3fSX2fpPb1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "78a81ce5-ae10-44e1-df2b-61298c40db1a"
+        "outputId": "3653d3e6-ef34-4f8e-947e-bee47011e04c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy penalty \"none\" :0.715\n"
+            "\n",
+            "Count Vector Size = \"100\"\n",
+            "Accuracy penalty \"none\": 0.715\n",
+            "Accuracy penalty \"l1\": 0.71\n",
+            "Accuracy penalty \"l2\": 0.7075\n",
+            "\n",
+            "Count Vector Size = \"500\"\n"
           ]
         },
         {
@@ -620,49 +624,38 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy penalty \"none\" :0.735\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/linear_model/_sag.py:354: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-            "  ConvergenceWarning,\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Accuracy penalty \"none\" :0.77\n",
-            "Accuracy penalty \"none\" :0.79\n",
-            "Accuracy penalty \"none\" :0.835\n",
-            "Accuracy penalty \"l1\" :0.71\n",
-            "Accuracy penalty \"l1\" :0.7975\n",
-            "Accuracy penalty \"l1\" :0.8\n",
-            "Accuracy penalty \"l1\" :0.805\n",
-            "Accuracy penalty \"l1\" :0.8025\n",
-            "Accuracy penalty \"l2\" :0.7075\n",
-            "Accuracy penalty \"l2\" :0.7775\n",
-            "Accuracy penalty \"l2\" :0.7975\n",
-            "Accuracy penalty \"l2\" :0.8025\n",
-            "Accuracy penalty \"l2\" :0.7975\n"
+            "Accuracy penalty \"none\": 0.74\n",
+            "Accuracy penalty \"l1\": 0.795\n",
+            "Accuracy penalty \"l2\": 0.7775\n",
+            "\n",
+            "Count Vector Size = \"1000\"\n",
+            "Accuracy penalty \"none\": 0.775\n",
+            "Accuracy penalty \"l1\": 0.8025\n",
+            "Accuracy penalty \"l2\": 0.7975\n",
+            "\n",
+            "Count Vector Size = \"1500\"\n",
+            "Accuracy penalty \"none\": 0.7925\n",
+            "Accuracy penalty \"l1\": 0.8025\n",
+            "Accuracy penalty \"l2\": 0.8\n",
+            "\n",
+            "Count Vector Size = \"2000\"\n",
+            "Accuracy penalty \"none\": 0.8325\n",
+            "Accuracy penalty \"l1\": 0.8025\n",
+            "Accuracy penalty \"l2\": 0.8025\n"
           ]
         }
       ],
       "source": [
         "# write your code here\n",
-        "\n",
+        "#The greateer the countVectorSize, the higher the accuracy, meaning, that 2000 countVectorSize yields teh greatest results on the test samples\n",
         "penalties = [\"none\", \"l1\", \"l2\"]\n",
         "countVectorSize = [100, 500, 1000, 1500, 2000]\n",
         "\n",
-        "for pen in penalties:\n",
-        "  for count in countVectorSize:\n",
-        "    if count < 100:\n",
-        "      max = 1000\n",
-        "    else:\n",
-        "      max = 1600\n",
+        "for count in countVectorSize:\n",
+        "  print('\\nCount Vector Size = \"{}\"'.format(count))\n",
+        "  for pen in penalties:\n",
+        "    max = 2000\n",
+        "    \n",
         "    text_classifier1 = Pipeline([\n",
         "      ('vect', CountVectorizer(max_features = count)),\n",
         "      ('tfidf', TfidfTransformer(use_idf=True)),\n",
@@ -671,7 +664,8 @@
         "    text_classifier1.fit(pre_processed_reviews_train, labels_train)\n",
         "    docs_test = pre_processed_reviews_test\n",
         "    predicted = text_classifier1.predict(docs_test)\n",
-        "    print('Accuracy penalty \"{}\" :{}'.format(pen,np.mean(predicted ==  labels_test))) \n",
+        "    print('Accuracy penalty \"{}\": {}'.format(pen,np.mean(predicted ==  labels_test))) \n",
+        "  \n",
         "\n"
       ]
     },
