--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -495,7 +495,16 @@
       ],
       "source": [
         "# write your code here\n",
-        "# In this task we see that the \"none\" penalty has the highest accuracy \n",
+        "# In this task we see that the \"none\" penalty has the highest accuracy\n",
+        "# l1 penalizes the sum of absolute values of the weights whereas l2 peanlizes the sum of squares of the weights \n",
+        "# Tfidf goal is to is to scale down the impact of the tokens\n",
+        "\n",
+        "# L1 and L2 are regularizations that can be used to address an overfitting issue\n",
+        "\n",
+        "# The reason in Task1, the penalty 'none' has the highest accuracy is because a peanlty tries to reduce overfitting. So no peantly being added in this task, is ideal as we are not looking\n",
+        "# weights of data or anythig like that. Here an overfitting would be good.\n",
+        "# Overfitting gives high accuracy when all we have is the training data, however, doesn't do well with a test set or some other data.\n",
+        "\n",
         "penalties = [\"none\", \"l1\", \"l2\"]\n",
         "\n",
         "for pen in penalties:\n",
@@ -554,7 +563,13 @@
       "source": [
         "# write your code here\n",
         "#In this task we see that either penalties l1 and l2 have the same accuracy or l1 is larger then l2 (in both cases none has the lowest)\n",
+        "#Tf-idf's goal is scale down the ipmact of tokens that occur very frequently. It takes a string and quantifies the importance of the string\n",
+        "#l1 shrinks coeefficients to zero whereas l2 shrinks coefficients evenly. \n",
         "\n",
+        "#The reason which the 'none' penalty has the lowest accuracy is because when TfidTransformer is set to true, as we are now considering the weight of the data, the penalty does nothing to \n",
+        "#change any of the data points weight. As explained earlier, l1 shrinks the coefficients to zero and l2 shrinks coefficients evenly. The reason l1 has a higher accuracy then l2 is because \n",
+        "#l1 creates a larger difference between weights of different strings. Shrinking it to 0 compared to shrinking them evenly like l2 allows for the algorithm to see who is more accurate. However,\n",
+        "#the difference of accuracy is not a very large, amount, sometimes so little the output states they are equal\n",
         "penalties = [\"none\", \"l1\", \"l2\"]\n",
         "\n",
         "\n",
